try to fix overflow: scroll; not woring

--- a/public/stylesheets/adoption.css
+++ b/public/stylesheets/adoption.css
@@ -775,6 +775,6 @@ transition: .5s;
         overflow: scroll;
         display: flex;
         flex-direction: column;
-        overflow-y: visible;
+        min-height: 0;
     }
 }
